--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "projects",
+  "name": "chatgpt-clone",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^3.3.3"
-  },
-  "description": ""
+    "tailwindcss": "^3.3.2"
+  }
 }
